week-2/day-5/IAC/ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  CloudFormation template to create a VPC, public subnet, Internet Gateway,
  route table, security group, EC2 instance, and Elastic IP.

Parameters:
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Existing EC2 Key Pair name for SSH access

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: CF-VPC

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: CF-Public-Subnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CF-IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: CF-RouteTable

  Route:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH (22) and HTTP (80)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CF-SG

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-068c0051b15cdb816   # Amazon Linux (us-east-1)
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: CF-EC2

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance

Outputs:
  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref EC2Instance

  PublicElasticIP:
    Description: Public Elastic IP address for SSH and HTTP access
    Value: !GetAtt ElasticIP.PublicIp

  VpcId:
    Description: VPC ID created by the stack
    Value: !Ref VPC

  SubnetId:
    Description: Subnet ID where EC2 is deployed
    Value: !Ref Subnet

  SecurityGroupId:
    Description: Security Group ID allowing SSH and HTTP
    Value: !Ref SecurityGroup

  AvailabilityZone:
    Description: Availability Zone used for deployment
    Value: us-east-1a
